HttpURLConnect 방식에서 WebClient 방식으로 변경 Adoption 페이지의 Controller, Service / ApiConfig 파일 변경사항 있음